Closed Bug 1533571 Opened 6 years ago Closed 6 years ago

Generated breakpoint position does not logically correspond with original location

Categories

(DevTools :: Debugger, defect, P2)

defect

Tracking

(firefox67 fixed)

RESOLVED FIXED
Firefox 67
Tracking Status
firefox67 --- fixed

People

(Reporter: loganfsmyth, Assigned: loganfsmyth)

References

Details

Attachments

(1 file)

Copying from https://github.com/firefox-devtools/debugger/issues/8093

These steps are pretty much the same as https://github.com/firefox-devtools/debugger/issues/8092
Steps:

  1. Open Editor/Tabs.js
  2. Find the line in updateHiddenTabs that has hiddenTabs.find(tab => tab.id == selectedSource.id)
  3. Click to add a breakpoint
  4. If https://github.com/firefox-devtools/debugger/issues/8092 has not been fixed, add a second breakpoint on hiddenTabs and delete the one on find
  5. Go to the generated file and view this breakpoint

AR:
There is a breakpoint on hiddenTabs that actually maps to the return value breakpoint of the function in the generated code.

ER:
There probably just shouldn't be a breakpoint there at all.

Pushed by lsmyth@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ea20a62a2fa0 Do not mark the return opcode as breakable for expression-body arrow functions. r=jlast
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 67
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: