Bug 1533571 - Do not mark the return opcode as breakable for expression-body arrow functions. r=jlast

Differential Revision: https://phabricator.services.mozilla.com/D22617